Moving files between layers of API, config, tests and routes.
