# back-end/src/api/models/index.ts
@@ -1,0 +1,6 @@
+import Health from './health.model';
+import AnimalFeeding from './animal-feeding.model';
+import User from './user.model';
+import ApiResponse from './api-response.model';
+
+export { Health, AnimalFeeding, User, ApiResponse };
